[package]
name = "tyvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
oxc_allocator = "0.1.0"
oxc_ast = "0.1.0"
oxc_parser = "0.1.0"
oxc_span = "0.1.0"

[profile.release]
debug = true
